--- a/tema 1.html
+++ b/tema 1.html
@@ -5,58 +5,143 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>autos mas: </title>
+    <title>autos mas rapidos del mundo</title>
 </head>
 <body>
-    
+     <!--Comienza etiqueta para barra de navegación-->
+     <nav>
+        <!--Comienza etiqueta para listas desordenadas-->
+        <ul>
+            <!--Comienzan y terminan cada una de las referencias a los otros archivos-->
+            <li><a href="index.html" target="_blank">autos mas rapidos del mundo</a></li>
+            <li><a href="tema2.html" target="_blank">edificios mas altos del mundo</a></li>
+            <li><a href="tema3.html" target="_blank">precios de la cafeteria</a></li>
+            <li><a href="tema4.html" target="_blank">¿por que el alamos contrata univercitarios?</a></li>
+        </ul>
+        <!--Termina etiqueta para listas desordenadas-->
+    </nav>
+    <!--Termina etiqueta para barra de navegación-->
     <section>
         <header>
             <h1></h1>
         </header>
 
             <main>
-                <!--aqui inicia articles-->
-                <!--inicia primera entrada-->
+                <!--Aquí van los articles **-->
+                <!--Inicia primera entrada-->
                 <article>
                     <header>
                         <hgroup>
-                            <h2>autos mas:</h2>
-                            <h4>08/02/2022</h4>
+                            <h2>autos mas rapidos del mundo</h2>
+                            <h4>15/03/2022</h4>
                         </hgroup>
                     </header>
                     <div>
-                        <h3>automoviles</h3>
+                        <h3>autos </h3>
                         <p>
                             el humano a sido capaz de fabricar automovoles
-                            con una tecnologia tan avanzada que pueda revasar 
+                            con una tecnologia tan avanzada que pueda revasar
                             los 400 kilometros por hora
                         </p>
                         <p>
                             sin embargo no es nada barato producirlos y las
-                            refaciones tampoco son nada baratas ademas de que 
+                            refaciones tampoco son nada baratas ademas de que
                             consumen demasiada gasolina
                         </p>
                         <p>
                             tienen motores enormes de gran cilindrada y muchos
                             caballos de fuerza
                         </p>
-
                     </div>
                     <footer>
 
                     </footer>
                 </article>
-                <!--termina primera entrada-->
+                <!--Termina primera entrada-->
+                <!--Inicia segunda entrada-->
+                <article>
+                    <header>
+                        <hgroup>
+                            <h2>Ranking de los autos mas rapidos del mundo</h2>
+                            <h4>15/03/2022</h4>
+                        </hgroup>
+                    </header>
+                    <div>
+                        <h3>los 5 mas rapidos del mundo</h3>
+                        <ol reversed>
+                            <li>Bugatti chiron super sport 300+ 490km</li>
+                            <li>SSC tatuara 460km</li>
+                            <li>McLaren speedtail 402km</li>
+                            <li>Koenigsegg regera 402km</li>
+                            <li>Lamborghini aventador SVJ 349km</li>
+                        </ol>
+                    </div>
+                </article>
+                <!--Termina segunda entrada-->
+                <!--Inicia tercera entrada-->
+                <article>
+                    <header>
+                        <h2>Sitios Oficiales para más información</h2>
+                        <h4>15/03/2022</h4>
+                    </header>
+                    <div>
+                        <h3>Página de autos</h3>
+                        <p>
+                            les presento paginas de informacion
+                        </p>
+                        <ul>
+                            <li><a href="https://www.carwow.es/blog/coches-mas-rapidos-del-mundo#gref" target="_blank"></a></li>
+                        </ul>
+                    </div>
+                </article>
+                <!--Termina tercera entrada-->
+                <!--Inicia cuarta entrada-->
+                <article>
+                    <header>
+                        <hgroup>
+                            <h4>15/03/2022</h4>
+                        </hgroup>
+                    </header>
+                    <div>
+                        <h3></h3>
+                        <p>
+                            los videos, los links del blog estan escojidos espesificamente 
+                            pra que el usuario pueda entender e informarce del tema del 
+                            blog ademas de que tratamos de que la informacion que se da 
+                            a conocer en este blog sea la mas correcta, entendible y facil
+                            de resumir
+                        </p>
+                        <figure>
+                            <iframe src="https://www.youtube.com/watch?v=t8XEGM8DTXY" </iframe>
+                            <figcaption>Video sobre los autos mas rapidos del mundo</figcaption>
+                        </figure>
+                        <p>
+                           lo que muestra el video de una canal verificado como este
+                           son los autos mas rapidos del mundo con datos como la 
+                           velocidad maxima, el precio del automovil, la aceleracion
+                           de 0 a 100 kiometros por hora
+                        </p>
+                        <p>
+                            el video esta muy bueno para informarte de manera basica
+                            del tema
+                        </p>
+                    </div>
+                    <footer>
 
+                    </footer>
+                </article>
+                <!--Termina cuarta entrada-->
             </main>
 
             <aside>
-                <!--barra lateral-->
+                <!-- Barra lateral-->
             </aside>
-            <footer>
-                <!--pie de pagina-->
-            </footer>
 
+            <footer>
+                <!--Pie de página-->
+            </footer>
     </section>
+
 </body>
 </html>
+  
