--- a/tema 3.html
+++ b/tema 3.html
@@ -5,58 +5,148 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>precios de la cafeteria </title>
+    <title>precios de la cafeteria</title>
 </head>
 <body>
-
+     <!--Comienza etiqueta para barra de navegación-->
+     <nav>
+        <!--Comienza etiqueta para listas desordenadas-->
+        <ul>
+            <!--Comienzan y terminan cada una de las referencias a los otros archivos-->
+            <li><a href="index.html" target="_blank">autos mas rapidos del mundo</a></li>
+            <li><a href="tema2.html" target="_blank">edificios mas altos del mundo</a></li>
+            <li><a href="tema3.html" target="_blank">precios de la cafeteria</a></li>
+            <li><a href="tema4.html" target="_blank">¿por que el alamos contrata univercitarios?</a></li>
+        </ul>
+        <!--Termina etiqueta para listas desordenadas-->
+    </nav>
+    <!--Termina etiqueta para barra de navegación-->
     <section>
         <header>
             <h1></h1>
         </header>
 
             <main>
-                <!--aqui van los articles **-->
-                <!--aqui primera entrada-->
+                <!--Aquí van los articles **-->
+                <!--Inicia primera entrada-->
                 <article>
                     <header>
                         <hgroup>
-                            <h2>titulo</h2>
-                            <h4>14/01/2022</h4>
+                            <h2>precios de la cafeteria</h2>
+                            <h4>15/03/2022</h4>
                         </hgroup>
                     </header>
                     <div>
-                        <h3>precios de la cafeteria</h3>
-                        <P>
-                            los precios dela cafeteria puede tener precios exesivos en
-                            algunos productos debido a difernetes sircunstancias
-                        </P>
+                        <h3>la cafeteria</h3>
+                        <p>
+                            los precios de la cafeteria puede tener precios exesivos en
+                            algunos productos debido a difernetes sircunstancias que
+                            varian el precio
+                        </p>
                         <p>
                             estos precios son definidos gracias a la ganacia, salario,
                             renta, producto y mas cosas y por eso algunas cosas tienen
-                            precio altu y tambien hay cosas con un precio mas bajo de 
+                            precio altu y tambien hay cosas con un precio mas bajo de
                             lo esperado
                         </p>
                         <p>
-                             la comida es sabrosa y con condimentos son amplios aunque
+                            la comida es sabrosa y con condimentos son amplios aunque
                              no sabemos la informacion nutricional
                         </p>
-
                     </div>
                     <footer>
 
                     </footer>
                 </article>
-                <!--termina primera entrada-->
+                <!--Termina primera entrada-->
+                <!--Inicia segunda entrada-->
+                <article>
+                    <header>
+                        <hgroup>
+                            <h2>Ranking de </h2>
+                            <h4>15/03/2022</h4>
+                        </hgroup>
+                    </header>
+                    <div>
+                        <h3>ranking de...</h3>
+                        <ol reversed>
+                            <li>puestos</li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ol>
+                    </div>
+                </article>
+                <!--Termina segunda entrada-->
+                <!--Inicia tercera entrada-->
+                <article>
+                    <header>
+                        <h2>Sitios Oficiales para más información</h2>
+                        <h4>15/11/2021</h4>
+                    </header>
+                    <div>
+                        <h3>Página de...</h3>
+                        <p>
+                            les presento paginas de informacion
+                        </p>
+                        <ul>
+                            <li><a href="paginas de internet" target="_blank"></a></li>
+                            <li><a href="" target="_blank"></a></li>
+                            <li><a href="" target="_blank"></a></li>
+                            <li><a href="" target="_blank"></a></li>
+                        </ul>
+                    </div>
+                </article>
+                <!--Termina tercera entrada-->
+                <!--Inicia cuarta entrada-->
+                <article>
+                    <header>
+                        <hgroup>
+                            <h2> <img src= inagen ></h2>
+                            <h4>15/03/2022</h4>
+                        </hgroup>
+                    </header>
+                    <div>
+                        <h3></h3>
+                        <p>
+                            texto
+                            de
+                            4
+                            lineas
+                        </p>
+                        <figure>
+                            <iframe src="link del video" </iframe>
+                            <figcaption>Video sobre (opcional)</figcaption>
+                        </figure>
+                        <p>
+                           lo que
+                           muestra
+                           el video
+                        </p>
+                        <p>
+                            opinion del video
+                        </p>
+                    </div>
+                    <footer>
 
+                    </footer>
+                </article>
+                <!--Termina cuarta entrada-->
             </main>
 
             <aside>
-                <!--barra lateral-->
+                <!-- Barra lateral-->
             </aside>
             <footer>
-                <!--pie de pagina-->
+                <!--Pie de página-->
             </footer>
-
-        </section>
-    </body>
-    </html>
+    </section>
+</body>
+</html>
+  
