--- a/tema 2.html
+++ b/tema 2.html
@@ -5,58 +5,142 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>edificios mas: </title>
+    <title>titulo</title>
 </head>
 <body>
-
+     <!--Comienza etiqueta para barra de navegación-->
+     <nav>
+        <!--Comienza etiqueta para listas desordenadas-->
+        <ul>
+            <!--Comienzan y terminan cada una de las referencias a los otros archivos-->
+            <li><a href="index.html" target="_blank">autos mas rapidos del mundo</a></li>
+            <li><a href="tema2.html" target="_blank">edificios mas altos del mundo</a></li>
+            <li><a href="tema3.html" target="_blank">precios de la cafeteria</a></li>
+            <li><a href="tema4.html" target="_blank">¿por que el alamos contrata univercitarios?</a></li>
+        </ul>
+        <!--Termina etiqueta para listas desordenadas-->
+    </nav>
+    <!--Termina etiqueta para barra de navegación-->
     <section>
         <header>
             <h1></h1>
         </header>
 
             <main>
-                <!--aqui van los articles **-->
-                <!--aqui primera entrada-->
+                <!--Aquí van los articles **-->
+                <!--Inicia primera entrada-->
                 <article>
                     <header>
                         <hgroup>
-                            <h2>edificios mas:</h2>
-                            <h4>14/01/2022</h4>
+                            <h2>edificios mas altos del mundo</h2>
+                            <h4>15/03/2022</h4>
                         </hgroup>
                     </header>
                     <div>
-                        <h3>edificios mas altos del mundo</h3>
-                        <P>
+                        <h3>edificios</h3>
+                        <p>
                             la avanzada ingenieria humana a permitido crear materiales
-                            tan resistentes y planos tan eficientes contra el viento 
+                            tan resistentes y planos tan eficientes contra el viento
                             que poseen los edificios mas altos del mundo
-                        </P>
+                        </p>
                         <p>
                             pero sin embargo algunos de estos edificios fueron construidos
                             con mano de obra obligada a trabajar por un salario minimo y
                             no pueden salie del pais en el que estan trabajando
                         </p>
                         <p>
-                             y tambien hay demasiados conceptos de edificios que nunca
-                             se van a construir pero la gente piensa que si
+                            y tambien hay demasiados conceptos de edificios que nunca
+                            se van a construir pero la gente piensa que si
                         </p>
-
                     </div>
                     <footer>
 
                     </footer>
                 </article>
-                <!--termina primera entrada-->
+                <!--Termina primera entrada-->
+                <!--Inicia segunda entrada-->
+                <article>
+                    <header>
+                        <hgroup>
+                            <h2>Ranking de los edificios mas altos del mundo</h2>
+                            <h4>15/03/2022</h4>
+                        </hgroup>
+                    </header>
+                    <div>
+                        <h3>ranking de los 5 mas altos</h3>
+                        <ol reversed>
+                            <li>burj khalifa 828m</li>
+                            <li>merdeka 679m</li>
+                            <li>torre de shanghai 632m</li>
+                            <li>abraj al bait 601m</li>
+                            <li>ping an financial center 599m</li>
+                        </ol>
+                    </div>
+                </article>
+                <!--Termina segunda entrada-->
+                <!--Inicia tercera entrada-->
+                <article>
+                    <header>
+                        <h2>Sitios Oficiales para más información</h2>
+                        <h4>15/11/2021</h4>
+                    </header>
+                    <div>
+                        <h3>Página de edificios</h3>
+                        <p>
+                            les presento paginas de informacion
+                        </p>
+                        <ul>
+                            <li><a href="https://es.wikipedia.org/wiki/Anexo:Rascacielos_m%C3%A1s_altos_del_mundo" target="_blank"></a></li>
+                            <li><a href="https://www.archdaily.mx/mx/778742/cual-es-el-edificio-mas-alto-del-mundo" target="_blank"></a></li>
+                            <li><a href="https://www.civitatis.com/blog/edificios-altos-mundo/" target="_blank"></a></li>
+                        </ul>
+                    </div>
+                </article>
+                <!--Termina tercera entrada-->
+                <!--Inicia cuarta entrada-->
+                <article>
+                    <header>
+                        <hgroup>
+                            <h4>15/03/2022</h4>
+                        </hgroup>
+                    </header>
+                    <div>
+                        <h3></h3>
+                        <p>
+                            los videos, los links del blog estan escojidos espesificamente 
+                            pra que el usuario pueda entender e informarce del tema del 
+                            blog ademas de que tratamos de que la informacion que se da 
+                            a conocer en este blog sea la mas correcta, entendible y facil
+                            de resumir
+                        </p>
+                        <figure>
+                            <iframe src="https://www.youtube.com/watch?v=ZXye2tfwwZA" </iframe>
+                            <figcaption>Video sobre edificios</figcaption>
+                        </figure>
+                        <p>
+                           lo que muestra el video de un canal famoso con una cantidad
+                           considerable de suscriptores son los edificios mas altos del
+                           del mundo, sirve para informarse del tema de manera muy
+                           completa
+                        </p>
+                        <p>
+                            el video esta muy bueno para informarte de manera basica
+                            del tema
+                        </p>
+                    </div>
+                    <footer>
 
+                    </footer>
+                </article>
+                <!--Termina cuarta entrada-->
             </main>
 
             <aside>
-                <!--barra lateral-->
+                <!-- Barra lateral-->
             </aside>
             <footer>
-                <!--pie de pagina-->
+                <!--Pie de página-->
             </footer>
-
-        </section>
-    </body>
-    </html>
+    </section>
+</body>
+</html>
