--- a/tema 4.html
+++ b/tema 4.html
@@ -5,58 +5,150 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>por que el alamos contrata univercitarios</title>
+    <title>¿por que el alamos contrata univercitarios?</title>
 </head>
 <body>
-    
+     <!--Comienza etiqueta para barra de navegación-->
+     <nav>
+        <!--Comienza etiqueta para listas desordenadas-->
+        <ul>
+            <!--Comienzan y terminan cada una de las referencias a los otros archivos-->
+            <li><a href="index.html" target="_blank">autos mas rapidos del mundo</a></li>
+            <li><a href="tema2.html" target="_blank">edificios mas altos del mundo</a></li>
+            <li><a href="tema3.html" target="_blank">precios de la cafeteria</a></li>
+            <li><a href="tema4.html" target="_blank">¿por que el alamos contrata univercitarios?</a></li>
+        </ul>
+        <!--Termina etiqueta para listas desordenadas-->
+    </nav>
+    <!--Termina etiqueta para barra de navegación-->
     <section>
         <header>
             <h1></h1>
         </header>
 
             <main>
-                <!--aqui inicia articles-->
-                <!--inicia primera entrada-->
+                <!--Aquí van los articles **-->
+                <!--Inicia primera entrada-->
                 <article>
                     <header>
                         <hgroup>
-                            <h2>titulo</h2>
-                            <h4>08/02/2022</h4>
+                            <h2>¿por que el alamos contrata univercitarios?</h2>
+                            <h4>15/03/2022</h4>
                         </hgroup>
                     </header>
                     <div>
                         <h3>univercitarios</h3>
                         <p>
                             los seres humanos que estan pasando por esta
-                            estapa de estudio que ya se pueden dedicar a 
+                            estapa de estudio que ya se pueden dedicar a
                             un trabajo mas serio pero con algunas desventajas
+                            laborales
                         </p>
                         <p>
-                           estos humanos suelen insultar a los alumnos y no ser
-                           responsables ademas de que algunos ALGUNOS univercitarios
-                           tienen que dejar el trabajo para ir a la univercidad
+                            estos humanos suelen insultar a los alumnos y no ser
+                            responsables ademas de que algunos ALGUNOS univercitarios
+                            tienen que dejar el trabajo para ir a la univercidad
+                            de manera precencial
                         </p>
                         <p>
-                           ademas algunos y dije ALGUNOS univercitarios les encanta
-                           irse de fiesta a altas horas de la madrugada y desvelarse
+                            ademas algunos y dije ALGUNOS univercitarios les encanta
+                           irse de fiesta a altas horas de la madrugada y desvelarse,
+                           afectando su rendimiento laboral
                         </p>
-
                     </div>
                     <footer>
 
                     </footer>
                 </article>
-                <!--termina primera entrada-->
+                <!--Termina primera entrada-->
+                <!--Inicia segunda entrada-->
+                <article>
+                    <header>
+                        <hgroup>
+                            <h2>Ranking de </h2>
+                            <h4>15/03/2022</h4>
+                        </hgroup>
+                    </header>
+                    <div>
+                        <h3>ranking de...</h3>
+                        <ol reversed>
+                            <li>puestos</li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ol>
+                    </div>
+                </article>
+                <!--Termina segunda entrada-->
+                <!--Inicia tercera entrada-->
+                <article>
+                    <header>
+                        <h2>Sitios Oficiales para más información</h2>
+                        <h4>15/11/2021</h4>
+                    </header>
+                    <div>
+                        <h3>Página de...</h3>
+                        <p>
+                            les presento paginas de informacion
+                        </p>
+                        <ul>
+                            <li><a href="paginas de internet" target="_blank"></a></li>
+                            <li><a href="" target="_blank"></a></li>
+                            <li><a href="" target="_blank"></a></li>
+                            <li><a href="" target="_blank"></a></li>
+                        </ul>
+                    </div>
+                </article>
+                <!--Termina tercera entrada-->
+                <!--Inicia cuarta entrada-->
+                <article>
+                    <header>
+                        <hgroup>
+                            <h2> <img src= inagen ></h2>
+                            <h4>15/03/2022</h4>
+                        </hgroup>
+                    </header>
+                    <div>
+                        <h3></h3>
+                        <p>
+                            texto
+                            de
+                            4
+                            lineas
+                        </p>
+                        <figure>
+                            <iframe src="link del video" </iframe>
+                            <figcaption>Video sobre (opcional)</figcaption>
+                        </figure>
+                        <p>
+                           lo que
+                           muestra
+                           el video
+                        </p>
+                        <p>
+                            opinion del video
+                        </p>
+                    </div>
+                    <footer>
 
+                    </footer>
+                </article>
+                <!--Termina cuarta entrada-->
             </main>
 
             <aside>
-                <!--barra lateral-->
+                <!-- Barra lateral-->
             </aside>
             <footer>
-                <!--pie de pagina-->
+                <!--Pie de página-->
             </footer>
-
     </section>
 </body>
 </html>
+  
