semana 4 terminada inicio semana 5

--- a/tema 3.html
+++ b/tema 3.html
@@ -16,7 +16,7 @@
             <li><a href="index.html" target="_blank">autos mas rapidos del mundo</a></li>
             <li><a href="tema2.html" target="_blank">edificios mas altos del mundo</a></li>
             <li><a href="tema3.html" target="_blank">precios de la cafeteria</a></li>
-            <li><a href="tema4.html" target="_blank">¿por que el alamos contrata univercitarios?</a></li>
+            <li><a href="tema4.html" target="_blank">videojuegos mas jugados</a></li>
         </ul>
         <!--Termina etiqueta para listas desordenadas-->
     </nav>
@@ -68,18 +68,15 @@
                         </hgroup>
                     </header>
                     <div>
-                        <h3>ranking de...</h3>
+                        <h3>ranking de productos com precio alto</h3>
                         <ol reversed>
-                            <li>puestos</li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>fiuste</li>
+                            <li>torta</li>
+                            <li>pinguinos</li>
+                            <li>papas de todo tipo</li>
+                            <li>refrescos de todo tipo</li>
+                            <li>picafresas y tamborcitos</li>
+                            <li>dulces empacados de la tiendita</li>
                         </ol>
                     </div>
                 </article>
@@ -96,10 +93,9 @@
                             les presento paginas de informacion
                         </p>
                         <ul>
-                            <li><a href="paginas de internet" target="_blank"></a></li>
-                            <li><a href="" target="_blank"></a></li>
-                            <li><a href="" target="_blank"></a></li>
-                            <li><a href="" target="_blank"></a></li>
+                            <li><a href="https://www.bbc.com/mundo/noticias-57365338" target="_blank"></a></li>
+                            <li><a href="https://www.bbc.com/mundo/noticias-42913421" target="_blank"></a></li>
+                            <li><a href="https://www.bbva.com/es/precios-que-hoy-suben-y-manana-bajan-cuales-son-los-motivos/" target="_blank"></a></li>
                         </ul>
                     </div>
                 </article>
@@ -108,29 +104,30 @@
                 <article>
                     <header>
                         <hgroup>
-                            <h2> <img src= inagen ></h2>
                             <h4>15/03/2022</h4>
                         </hgroup>
                     </header>
                     <div>
                         <h3></h3>
                         <p>
-                            texto
-                            de
-                            4
-                            lineas
+                            los videos, los links del blog estan escojidos espesificamente 
+                            pra que el usuario pueda entender e informarce del tema del 
+                            blog ademas de que tratamos de que la informacion que se da 
+                            a conocer en este blog sea la mas correcta, entendible y facil
+                            de resumir
                         </p>
                         <figure>
-                            <iframe src="link del video" </iframe>
-                            <figcaption>Video sobre (opcional)</figcaption>
+                            <iframe src="https://www.youtube.com/watch?v=jHyWfIJqoIc" </iframe>
+                                <figcaption>Video sobre los encarecimientos de la comida</figcaption>
                         </figure>
                         <p>
-                           lo que
-                           muestra
-                           el video
+                           el video muestra una de las mayores razones por la cual los
+                           productos se van haciendo cada vez mas costosos, muestra por 
+                           que estan escaseando los productos y la subida de precio de 
+                           los mismos
                         </p>
                         <p>
-                            opinion del video
+                            
                         </p>
                     </div>
                     <footer>
