--- a/tema 1.html
+++ b/tema 1.html
@@ -16,7 +16,7 @@
             <li><a href="index.html" target="_blank">autos mas rapidos del mundo</a></li>
             <li><a href="tema2.html" target="_blank">edificios mas altos del mundo</a></li>
             <li><a href="tema3.html" target="_blank">precios de la cafeteria</a></li>
-            <li><a href="tema4.html" target="_blank">¿por que el alamos contrata univercitarios?</a></li>
+            <li><a href="tema4.html" target="_blank">videojuegos mas jugados</a></li>
         </ul>
         <!--Termina etiqueta para listas desordenadas-->
     </nav>
@@ -71,6 +71,7 @@
                         <ol reversed>
                             <li>Bugatti chiron super sport 300+ 490km</li>
                             <li>SSC tatuara 460km</li>
+                            <li>koenigsegg aguera rs 447km</li>
                             <li>McLaren speedtail 402km</li>
                             <li>Koenigsegg regera 402km</li>
                             <li>Lamborghini aventador SVJ 349km</li>
