--- a/tema 2.html
+++ b/tema 2.html
@@ -16,7 +16,7 @@
             <li><a href="index.html" target="_blank">autos mas rapidos del mundo</a></li>
             <li><a href="tema2.html" target="_blank">edificios mas altos del mundo</a></li>
             <li><a href="tema3.html" target="_blank">precios de la cafeteria</a></li>
-            <li><a href="tema4.html" target="_blank">¿por que el alamos contrata univercitarios?</a></li>
+            <li><a href="tema4.html" target="_blank">videojuagos mas jugados</a></li>
         </ul>
         <!--Termina etiqueta para listas desordenadas-->
     </nav>
