--- a/tema 1.html
+++ b/tema 1.html
@@ -132,6 +132,48 @@
                     </footer>
                 </article>
                 <!--Termina cuarta entrada-->
+                <!--inicia quinta entrada-->
+                <article>
+                    <header>
+                        <hgroup>
+                            <!--titulo del archivo con icono-->
+                            <h2><img src="https://media.revistagq.com/photos/5d89c9335d07090008d92dd6/16:9/w_2560%2Cc_limit/2020-mclaren-senna-mmp-1545234547.jpg"></h2>
+                                <!--fecha -->
+                                <h4>16/03/22</h4>
+                        </hgroup>
+                    </header>
+                    <div>
+
+                        <h3>los autos incloudos en el blog</h3>
+                        <p>los autos que se inclyen en este blog son autoa que ya
+                            salieron a produccion y que no son conseptos, ademas 
+                            de ser autos producidos en masa y no autos que solo hay 
+                            uno en todo el mundo
+                        </p>
+
+                        <figure>
+                            <img src="https://img.remediosdigitales.com/9bf627/bugatti-chiron-2018-0-400-0-011/1366_2000.jpg"></h2>
+                            <figcaption>este es el bugatti chiron sport de 16 cilindros,
+                                el antecesor del chiron super sport 300+
+                            </figcaption>
+                        </figure>
+
+                    </div>
+
+                    <footer>
+                        <!--datos del autor-->
+                        <div>
+                            <span>Francisco Jose</span> <a href="_blank"></a>
+                        </div>
+                        <!--fin de los datos del autor-->
+                        <!--bibliografia-->
+                        <blockquote>
+                            <p>cita de pagina</p>
+                        </blockquote>
+                        <!--fin de biografia-->
+                    </footer>
+                </article>
+                <!--termina quinta entrada-->
             </main>
 
             <aside>
@@ -145,4 +187,3 @@
 
 </body>
 </html>
-  
