--- a/tema 2.html
+++ b/tema 2.html
@@ -133,6 +133,50 @@
                     </footer>
                 </article>
                 <!--Termina cuarta entrada-->
+                <!--inicia quinta entrada-->
+                <article>
+                    <header>
+                        <hgroup>
+                            <!--titulo del archivo con icono-->
+                            <h2><img src="https://as01.epimg.net/tikitakas/imagenes/2021/06/21/portada/1624259271_509490_1624260021_sumario_normal.jpg"></h2>
+                                <!--fecha -->
+                                <h4>16/03/22</h4>
+                        </hgroup>
+                    </header>
+                    <div>
+
+                        <h3>edificios incluidos en este blog</h3>
+                        <p>los edificios incluidos en este blog son edificios
+                            ya existentes y no edificios concepto o que todabia
+                            estan en construccion, ademas de que no se incluye
+                            antenas o adormos solo edificios con alguna utilidad
+                        </p>
+
+                        <figure>
+                            <img src="ihttps://upload.wikimedia.org/wikipedia/commons/6/6d/Petronas_Twin_Towers_2010_April.jpg"></h2>
+                            <figcaption>estas son las torres petronas ubicadas en 
+                                kuala lumpur, miden 452 metros de altura y fueron 
+                                el edificio mas alto del mundo durante los años
+                                1988 a 2003
+                            </figcaption>
+                        </figure>
+
+                    </div>
+
+                    <footer>
+                        <!--datos del autor-->
+                        <div>
+                            <span>Francisco Jose</span> <a href="_blank"></a>
+                        </div>
+                        <!--fin de los datos del autor-->
+                        <!--bibliografia-->
+                        <blockquote>
+                            <p>cita de pagina</p>
+                        </blockquote>
+                        <!--fin de biografia-->
+                    </footer>
+                </article>
+                <!--termina quinta entrada-->
             </main>
 
             <aside>
