--- a/tema 3.html
+++ b/tema 3.html
@@ -135,6 +135,50 @@
                     </footer>
                 </article>
                 <!--Termina cuarta entrada-->
+                <!--inicia quinta entrada-->
+                <article>
+                    <header>
+                        <hgroup>
+                            <!--titulo del archivo con icono-->
+                            <h2><img src="https://www.allofjose.com/uploads/4/5/8/9/45898873/editor/la-tiendita.png?1621256379"></h2>
+                                <!--fecha -->
+                                <h4>16/03/22</h4>
+                        </hgroup>
+                    </header>
+                    <div>
+
+                        <h3>los precios</h3>
+                        <p>los precios se an ido ajustando a los tiempos mas 
+                            recientes, con la devaluacion de la moneda, el 
+                            precio de los alimentos, salarios de los trabajadores
+                            y la gancia son los mas responsables de que las cosas
+                            no valgan lo ismo que hace 5 años
+                        </p>
+
+                        <figure>
+                            <img src="https://images11.eitb.eus/multimedia/images/2018/01/03/2231610/20180103141850_subida-precios_foto610x342.jpg"></h2>
+                            <figcaption>esta es una imagen que representa la subida 
+                                de precio de algunos alimentos de la tiendita con 
+                                el pasar del tiempo
+                            </figcaption>
+                        </figure>
+
+                    </div>
+
+                    <footer>
+                        <!--datos del autor-->
+                        <div>
+                            <span>Juan Pablo Grigalba</span> <a href="_blank"></a>
+                        </div>
+                        <!--fin de los datos del autor-->
+                        <!--bibliografia-->
+                        <blockquote>
+                            <p>cita de pagina</p>
+                        </blockquote>
+                        <!--fin de biografia-->
+                    </footer>
+                </article>
+                <!--termina quinta entrada-->
             </main>
 
             <aside>
