--- a/tema 4.html
+++ b/tema 4.html
@@ -134,6 +134,50 @@
                     </footer>
                 </article>
                 <!--Termina cuarta entrada-->
+                <!--inicia quinta entrada-->
+                <article>
+                    <header>
+                        <hgroup>
+                            <!--titulo del archivo con icono-->
+                            <h2><img src="https://www.elsoldemexico.com.mx/finanzas/tecnologia/brexvq-videojuegos-extremistas-control-de-xbox-con-rgb.jpg/ALTERNATES/LANDSCAPE_1140/Videojuegos%20%20Extremistas%20Control%20de%20Xbox%20%20con%20RGB.jpg"></h2>
+                                <!--fecha -->
+                                <h4>16/03/22</h4>
+                        </hgroup>
+                    </header>
+                    <div>
+
+                        <h3>los videojuegos y sus veneficios</h3>
+                        <p>reflejos, atencion, sincronozacion, relajacion. recreacion,
+                            liderazgp, trabajo en equipo o estimular la creatividad
+                            son algunos de los veneficios de algunos videojuegos
+                        </p>
+
+                        <figure>
+                            <img src="https://img.unocero.com/2018/08/beneficio-videojuegos-933x467-880x440.png"></h2>
+                            <figcaption>los veneficios de los videojuegos son 
+                                variados aunque muchas peronas no estan dispuestos
+                                a pagar por un videojuego hay videojuegos gratuitos
+                                muy buenos que ofrecen multiples veneficios a la 
+                                salud si se juega el tiempo correcto
+                            </figcaption>
+                        </figure>
+
+                    </div>
+
+                    <footer>
+                        <!--datos del autor-->
+                        <div>
+                            <span>Juan Pablo Grigalba</span> <a href="_blank"></a>
+                        </div>
+                        <!--fin de los datos del autor-->
+                        <!--bibliografia-->
+                        <blockquote>
+                            <p>cita de pagina</p>
+                        </blockquote>
+                        <!--fin de biografia-->
+                    </footer>
+                </article>
+                <!--termina quinta entrada-->
             </main>
 
             <aside>
