--- a/tema 1.html
+++ b/tema 1.html
@@ -75,6 +75,7 @@
                             <li>McLaren speedtail 402km</li>
                             <li>Koenigsegg regera 402km</li>
                             <li>Lamborghini aventador SVJ 349km</li>
+                            <!--TIENEN QUE SER 10-->
                         </ol>
                     </div>
                 </article>
@@ -93,6 +94,7 @@
                         <ul>
                             <li><a href="https://www.carwow.es/blog/coches-mas-rapidos-del-mundo#gref" target="_blank"></a></li>
                         </ul>
+                        <!--FALTÓ COMPLETAR LOS 4 LINKS-->
                     </div>
                 </article>
                 <!--Termina tercera entrada-->
