--- a/tema 4.html
+++ b/tema 4.html
@@ -17,6 +17,9 @@
             <li><a href="tema2.html" target="_blank">edificios mas altos del mundo</a></li>
             <li><a href="tema3.html" target="_blank">precios de la cafeteria</a></li>
             <li><a href="tema4.html" target="_blank">videojuegos mas jugados</a></li>
+            <!--SU NAV NO SIRVE-->
+            <!--SE PUEDEN FIJAR QUE LES FALTA PONER UN ESPACIO ENTRE LA PALABRA  TEMA Y EL # EN EL
+            NOMBRE DEL ARCHIVO-->
         </ul>
         <!--Termina etiqueta para listas desordenadas-->
     </nav>
@@ -101,6 +104,7 @@
                             <li><a href="https://es.wikipedia.org/wiki/Anexo:Videojuegos_m%C3%A1s_jugados_por_n%C3%BAmero_de_jugadores" target="_blank"></a></li>
                         </ul>
                     </div>
+                    <!--NO VEO LOS FOOTERS EN CADA ARTICLE-->
                 </article>
                 <!--Termina tercera entrada-->
                 <!--Inicia cuarta entrada-->
