--- a/tema4.html
+++ b/tema4.html
@@ -40,7 +40,7 @@
                         </hgroup>
                     </header>
                     <div>
-                        <h3>univercitarios</h3>
+                        <h3>videojuegos</h3>
                         <p>
                             los videojuegos para algunos padres son la razon de todos
                             los problemas de sus hijos pero en algunos casos esto puede
@@ -83,6 +83,8 @@
                             <li>valorant</li>
                             <li>call of duty</li>
                             <li>free fire</li>
+                            <li>rocket league</li>
+                            <li>red devil 2</li>
                         </ol>
                     </div>
                 </article>
