<h4>dd/mes/aa</h4>

--- a/tema1.html
+++ b/tema1.html
@@ -25,7 +25,7 @@
     <section>
         <!-- Empieza encabezado del blog -->
         <header>
-            <h1>Título de mi blog</h1>
+            <h1>el blogardo</h1>
         </header>
         <!-- Termina encabezado del blog -->
 
@@ -37,27 +37,28 @@
                 <header>
                     <hgroup>
                         <!-- Título del artículo -->
-                        <h2> <img src="assets/images/imagen_ejemplo.png" alt="Texto descriptivo de la imagen" height="35px" width="auto"> Introducción a mi_tema</h2>
+                        <h2>--tema1--</h2>
                         <!-- Fecha en la que se escribió el artículo -->
-                        <h4>dd/mes/aa</h4>
+                        <h4>07/05/2022</h4>
                     </hgroup>
                 </header>
                 <!-- inicia contenido del artículo -->
                 <div>
-                    <h3>Contexto</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dolorum autem veritatis repellendus voluptatem, enim mollitia in eos maxime, libero quae, accusantium ratione quos ipsa atque officia earum! Accusantium quo iste, aliquam sint porro assumenda quia rerum excepturi.
-                        Sit, quam excepturi. Tenetur consectetur eligendi unde corrupti dolor sequi voluptas at sit omnis quasi inventore deserunt illum architecto aut assumenda, doloremque cumque possimus fugiat fuga. Unde architecto illum praesentium odit vel vero voluptatem provident eum? Ea aut
-                        facilis aliquid architecto corrupti id delectus obcaecati illum voluptas quaerat voluptates mollitia atque in reiciendis debitis, neque aspernatur libero dignissimos vel amet unde fuga.</p>
+                    <h3>automoviles</h3>
+                    <p>el  ser humano a sido capaz de diseñar veiculos que sobrepasen
+                         los 400 kilometros por hora desde el año 2007 y con foeme pasa el
+                        tiempo los automoviles se vuelven mas rapidos con una aceleracion 
+                        mas eficiente y con una mejpr aerodimamica
+                    </p>
 
-                    <h3>Desarrollo</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dolorum autem veritatis repellendus voluptatem, enim mollitia in eos maxime, libero quae, accusantium ratione quos ipsa atque officia earum! Accusantium quo iste, aliquam sint porro assumenda quia rerum excepturi.
-                        Sit, quam excepturi. Tenetur consectetur eligendi unde corrupti dolor sequi voluptas at sit omnis quasi inventore deserunt illum architecto aut assumenda, doloremque cumque possimus fugiat fuga. Unde architecto illum praesentium odit vel vero voluptatem provident eum? Ea aut
-                        facilis aliquid architecto corrupti id delectus obcaecati illum voluptas quaerat voluptates mollitia atque in reiciendis debitis, neque aspernatur libero dignissimos vel amet unde fuga.</p>
+                    <p>o no es nada barato producirlos y las
+                        refaciones tampoco son nada baratas ademas de que
+                        consumen demasiada gasolina
+                    </p>
 
-                    <h3>Motivación</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dolorum autem veritatis repellendus voluptatem, enim mollitia in eos maxime, libero quae, accusantium ratione quos ipsa atque officia earum! Accusantium quo iste, aliquam sint porro assumenda quia rerum excepturi.
-                        Sit, quam excepturi. Tenetur consectetur eligendi unde corrupti dolor sequi voluptas at sit omnis quasi inventore deserunt illum architecto aut assumenda, doloremque cumque possimus fugiat fuga. Unde architecto illum praesentium odit vel vero voluptatem provident eum? Ea aut
-                        facilis aliquid architecto corrupti id delectus obcaecati illum voluptas quaerat voluptates mollitia atque in reiciendis debitis, neque aspernatur libero dignissimos vel amet unde fuga.</p>
+                    <p> tienen motores enormes de gran cilindrada y muchos
+                        caballos de fuerza
+                    </p>
 
                     <!-- inicia ilustración del artículo -->
                     <figure>
@@ -97,22 +98,23 @@
                 <div>
                     <!-- Empieza mi ranking en orden inverso -->
                     <ol reversed>
-                        <li>elemento 1</li>
-                        <li>elemento 2</li>
-                        <li>elemento 3</li>
-                        <li>elemento 4</li>
-                        <li>elemento 5</li>
-                        <li>elemento 6</li>
-                        <li>elemento 7</li>
-                        <li>elemento 8</li>
-                        <li>elemento 9</li>
-                        <li>elemento 10</li>
+                        <li>Bugatti chiron super sport 300+ 490km</li>
+                        <li>koenigsegg jesko 490km</li>
+                        <li>SSC tatuara 460km</li>
+                        <li>koenigsegg aguera rs 447km</li>
+                        <li>ssc ultimate aero 420km</li>
+                        <li>bugatti beyron ss 417km</li>
+                        <li>hennessy venom 412km</li>
+                        <li>McLaren speedtail 402km</li>
+                        <li>Koenigsegg regera 402km</li>
+                        <li>saleen s7 399km</li>
                     </ol>
                     <!-- Termina mi ranking en orden inverso -->
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique aliquam et quo id ipsa, ratione rem excepturi magni tempore totam aspernatur, esse, illum accusantium blanditiis culpa praesentium vel. Enim dignissimos velit mollitia voluptates alias a quasi error doloremque
-                        culpa, vitae aliquid harum facilis explicabo ullam. Officiis eos, consequatur nisi, nam odit perspiciatis quas placeat optio ratione, officia perferendis cum labore ab ullam illo minima veniam aut hic animi? Beatae nostrum sapiente aperiam debitis eligendi incidunt, unde eos
-                        repellendus at fugiat quae odio assumenda, non magnam! Facilis fugit quibusdam sed voluptatibus magni, dolorem rerum ea praesentium, totam nihil veritatis non repudiandae!</p>
-
+                    <p>
+                        las velocidades maximas de la mayoria de los autos son probadas en una pista en linea recta
+                        corren esa pista recta de una longitud muy larga 2 veces y la velocidad de los 2 intentos
+                        se promedia para sacar una velocidad6666666666666666666666666666666666666666666666666666\
+                    </p>
                     <!-- inicia ilustración del artículo -->
                     <figure>
                         <img src="https://via.placeholder.com/600x600.jpg/0000ff/ffffff" alt="ilustracion  artículo" height="600px" width="auto">
@@ -279,7 +281,7 @@
                     <!-- fin datos del autor -->
                     <!-- bibliografía -->
                     <blockquote>
-                        <p>Cita correctamente hecha.</p>
+                        <p>Cita</p>
                     </blockquote>
                     <!-- fin bibliografía -->
                 </footer>
@@ -298,14 +300,14 @@
         <!-- empieza el footer -->
         <footer>
             <div>
-                <span>Nombre persona 1</span>
+                <span>Francisco jose fernandez de cevallos padilla</span>
             </div>
             <div>
-                <span>Blog creado en <i>nombre de tu colegio</i>.</span>
+                <span>Colegio alamos</span>
                 <span>Las opiniones contenidas en este proyecto pertenecen a los autores de cada entrada.</span>
             </div>
             <div>
-                <span>Nombre persona 2</span>
+                <span>Juan pablo grijalba duhne</span>
             </div>
 
         </footer>
